fix header text size on mobile

--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -53,7 +53,7 @@
 @media only screen and (max-width: 768px) {
 	/* For mobile phones: */
 	.header h1 {
-		font-size: 1.25em;
+		font-size: 1.1em;
 	}
 	.header nav {
 		padding-right: 0;
